--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
     "react-redux": "^7.2.5",
-    "redux": "^4.1.1"
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
